contain text an stop overflow

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,24 @@ article section{
     padding: 10px 20px;
     min-width: 300px;
 }
+header{
+    display:flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    margin:0 10px;
+}
+header h1{
+    font-size:2rem;
+    margin:0;
+}
+header div{
+    flex-direction: column;
+    align-items: flex-start;
+}
+header div p{
+    margin:5px 0px;
+}
 div{
     display: flex;
     justify-content: center;
@@ -20,7 +38,7 @@ div{
 input{
     width: 70%;
     padding: 10px;
-    margin: 5px;
+    margin:10px 5px;
     border: none;
     border-radius: 2px;
     background-color: #f2f2f2;
@@ -50,6 +68,12 @@ article section ul li{
     padding:0px 10px;
     margin:5px 0;
     border-radius: 5px;
+}
+ul li p{
+    max-width: 70%;
+    width:100%;
+    overflow: hidden;
+    text-overflow: ellipsis;git a
 }
 span{
     display: flex;
